# PicoZ-ish

./: CMakeLists.txt  LICENSE  README.md  makedata.bat
source/: hw_config.c  hw_config.h  main.cpp  pio.cpp  pio.hpp  psram.cpp  psram.hpp  sdcard.cpp  sdcard.h  sdcard.hpp  uart.cpp  uart.h  uart.hpp  z80_in_data.pio  z80_io_address.pio  z80_io_data.pio  z80_io_sampling.pio
